[tool.poetry]
name = "pytest"
version = "0.1.0"
description = "First management code"
authors = ["Nguyen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
